--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "axios": "^1.3.4",
     "framer-motion": "^10.12.16",
+    "react-icons": "^4.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
